--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 ################################
 ###### Core dependencies #######
 ################################
+
+torch>=1.11
+transformers>=4.16
