--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,10 @@ name = smashed
 version = 0.1.3
 author = Allen Institute for Artificial Intelligence
 author_email = contact@allenai.org
-description = A set of utilities to create and manage configuration
-    files effectively, built on top of OmegaConf.
+description = Sequential MAppers for Sequences of HEterogeneous Dictionaries
+    is a set of Python interfaces designed to apply transformations to samples
+    in datasets, which are often implemented as sequences of dictionaries.
+
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/allenai/smashed
