--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
         task:
           - name: Style
             run: |
-              isort --check .
-              black --check .
+              isort -l 79 --check .
+              black -l 79 --check .
 
           - name: Lint
             run: |
