--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         id: virtualenv-cache
         with:
           path: .venv
-          key: ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('requirements.txt') }}-${{ hashFiles('dev-requirements.txt') }}
+          key: ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('setup.cfg') }}-${{ hashFiles('dev-requirements.txt') }}-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
             ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}-
 
@@ -84,7 +84,8 @@ jobs:
         if: steps.virtualenv-cache.outputs.cache-hit == 'true'
         run: |
           . .venv/bin/activate
-          pip install --no-deps -e .[dev]
+          pip install --no-deps -e .
+          pip install -r 'dev-requirements.txt'
 
       - name: Show environment info
         run: |
