--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
         task:
           - name: Style
             run: |
-              isort -l 79 --check .
-              black -l 79 --check .
+              isort --check .
+              black --check .
 
           - name: Lint
             run: |
@@ -78,14 +78,14 @@ jobs:
         run: |
           test -d .venv || virtualenv -p $(which python) --copies --reset-app-data .venv
           . .venv/bin/activate
-          pip install -e .[dev]
+          pip install -e .
+          pip install -r 'dev-requirements.txt'
 
       - name: Setup virtual environment (cache hit)
         if: steps.virtualenv-cache.outputs.cache-hit == 'true'
         run: |
           . .venv/bin/activate
           pip install --no-deps -e .
-          pip install -r 'dev-requirements.txt'
 
       - name: Show environment info
         run: |
