--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.black]
-line-length = 80
+line-length = 79
 
 include = '\.pyi?$'
 
@@ -18,6 +18,7 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
+line_length = 79
 multi_line_output = 3
 
 [build-system]
