--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,9 @@ install_requires =
 [options.extras_require]
 datasets =
     datasets >= 2.4.0
-
+torchdata =
+    torch >= 1.12.0
+    torchdata >= 0.4.0
 
 
 [options.packages.find]
