--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.1.9"
+version = "0.1.10"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -21,9 +21,10 @@ dependencies = [
 "Bug Tracker" = "https://github.com/allenai/smashed/issues"
 
 
+
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["smashed"]
+include = ["smashed*"]
 namespaces = false
 
 
