--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.1.9"
+version = "0.1.11"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -12,7 +12,8 @@ requires-python = ">=3.8"
 dependencies = [
     "torch >= 1.9",
     "transformers >= 4.5",
-    "necessary>=0.2.2"
+    "necessary>=0.2.2",
+    "trouting>=0.1.1"
 ]
 
 [project.urls]
