--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ requires-python = ">=3.8"
 dependencies = [
     "torch >= 1.9",
     "transformers >= 4.5",
-    "necessary>=0.2.2",
-    "trouting>=0.1.1"
+    "necessary>=0.2.3",
+    "trouting>=0.1.3",
+    "ftfy>=6.1.1"
 ]
 
 [project.urls]
@@ -23,9 +24,10 @@ dependencies = [
 
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["smashed"]
-namespaces = false
+where = ["src"]
+
+[tool.setuptools.package-data]
+smashed = ["py.typed"]
 
 
 [build-system]
@@ -52,8 +54,8 @@ datasets = [
   "datasets>=2.4.0"
 ]
 torchdata = [
-  "torch >= 1.12.0",
-  "torchdata >= 0.4.0"
+  "torch >= 1.12.1",
+  "torchdata >= 0.4.1"
 ]
 all = [
     "smashed[dev]",
@@ -107,9 +109,6 @@ per-file-ignores = [
     '__init__.py:F401',
     '*.pyi:E302,E305'
 ]
-
-[tool.setuptools.package-data]
-springs = ["py.typed"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests/"]
