--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ smashed = ["py.typed"]
 build-backend = "setuptools.build_meta"
 requires = [
     "setuptools >= 61.0.0",
+    "pip >= 21.0.0",
     "wheel"
 ]
 
