--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.5.0"
+version = "0.5.1"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -9,10 +9,14 @@ authors = [
 license = {text = "Apache-2.0"}
 readme = "README.md"
 requires-python = ">=3.8"
-dynamic = ["dependencies"]
-
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+dependencies = [
+    "torch>=1.9",
+    "transformers>=4.5",
+    "necessary>=0.2.3",
+    "trouting>=0.2.2",
+    "ftfy>=6.1.1",
+    "platformdirs>=2.5.0",
+]
 
 
 [project.urls]
@@ -25,7 +29,7 @@ dependencies = {file = ["requirements.txt"]}
 where = ["src"]
 
 [tool.setuptools.package-data]
-smashed = ["py.typed"]
+smashed = ["py.typed", "../requirements.txt"]
 
 
 [build-system]
