--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.6.0"
+version = "0.6.1"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -43,7 +43,7 @@ requires = [
 [project.optional-dependencies]
 dev = [
     "springs>=1.4.2",
-    "black>=22.6.0",
+    "black[jupyter]>=22.6.0",
     "isort>=5.10.1",
     "mypy>=0.971",
     "pytest>=5.2",
