--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.9.0"
+version = "0.10.0"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -17,6 +17,33 @@ dependencies = [
     "ftfy>=6.1.1",
     "platformdirs>=2.5.0",
 ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+    "Typing :: Typed",
+]
+keywords = [
+    "mappers",
+    "pytorch",
+    "torch",
+    "huggingfae",
+    "transformers",
+    "datasets",
+    "dict",
+    "datset",
+    "pipeline",
+    "preprocessing",
+    "nlp",
+    "natural language processing",
+    "text",
+    "prompting"
+]
+
 
 
 [project.urls]
