--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.8"
 dependencies = [
     "torch>=1.9",
     "transformers>=4.5",
-    "necessary>=0.2.3",
+    "necessary>=0.3.1",
     "trouting>=0.2.2",
     "ftfy>=6.1.1",
     "platformdirs>=2.5.0",
@@ -86,7 +86,8 @@ remote = [
 ]
 datasets = [
   "datasets>=2.4.0",
-  "dill>=0.3.0"
+  "dill>=0.3.0",
+  "promptsource>=0.2.3"
 ]
 torchdata = [
   "torch>=1.12.1",
