--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ requires = [
 [project.optional-dependencies]
 dev = [
     "springs>=1.4.2",
-    "black>=22.6.0",
+    "black[jupyter]<=21.12b0", # compatibility with promptsource
     "isort>=5.10.1",
     "mypy>=0.971",
     "pytest>=5.2",
