--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.9.0"
+version = "0.10.0"
 description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
 authors = [
     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
@@ -12,11 +12,39 @@ requires-python = ">=3.8"
 dependencies = [
     "torch>=1.9",
     "transformers>=4.5",
-    "necessary>=0.2.3",
+    "necessary>=0.3.1",
     "trouting>=0.2.2",
     "ftfy>=6.1.1",
     "platformdirs>=2.5.0",
+    "glom>=21.0.0",
 ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+    "Typing :: Typed",
+]
+keywords = [
+    "mappers",
+    "pytorch",
+    "torch",
+    "huggingfae",
+    "transformers",
+    "datasets",
+    "dict",
+    "datset",
+    "pipeline",
+    "preprocessing",
+    "nlp",
+    "natural language processing",
+    "text",
+    "prompting"
+]
+
 
 
 [project.urls]
@@ -43,8 +71,8 @@ requires = [
 [project.optional-dependencies]
 dev = [
     "springs>=1.4.2",
-    "black[jupyter]>=22.6.0",
-    "isort>=5.10.1",
+    "black[jupyter]>=21.12b0",
+    "isort>=5.8.0",
     "mypy>=0.971",
     "pytest>=5.2",
     "ipython>=8.4.0",
@@ -52,14 +80,19 @@ dev = [
     "flake8>=5.0",
     "ipdb>=0.13.0",
     "flake8-pyi>=22.8.1",
-    "Flake8-pyproject>=1.1.0"
+    "Flake8-pyproject>=1.1.0",
 ]
 remote = [
     "smart-open>=5.2.1"
 ]
 datasets = [
   "datasets>=2.4.0",
-  "dill>=0.3.0"
+  "dill>=0.3.0",
+]
+prompting = [
+    "promptsource>=0.2.3",
+    "blingfire>=0.1.8",
+    "PyYAML>=6.0.0",
 ]
 torchdata = [
   "torch>=1.12.1",
@@ -69,7 +102,8 @@ all = [
     "smashed[dev]",
     "smashed[datasets]",
     "smashed[torchdata]",
-    "smashed[remote]"
+    "smashed[remote]",
+    "smashed[prompting]",
 ]
 
 [tool.black]
