--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,8 @@ dev = [
     "Flake8-pyproject>=1.1.0",
 ]
 remote = [
-    "smart-open>=5.2.1"
+    "smart-open>=5.2.1",
+    "boto3>=1.25.5",
 ]
 datasets = [
   "datasets>=2.4.0",
