--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,16 @@
 [project]
 name = "smashed"
 version = "0.15.5"
-description = "Sequential MAppers for Sequences of HEterogeneous Dictionaries is a set of Python interfaces designed to apply transformations to samples in datasets, which are often implemented as sequences of dictionaries."
-authors = [
-    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
-    {name = "Luca Soldaini", email = "luca@soldaini.net"}
-]
+description = """\
+SMASHED is a toolkit designed to apply transformations to samples in \
+datasets, such as fields extraction, tokenization, prompting, batching, \
+and more. Supports datasets from Huggingface, torchdata iterables, or \
+simple lists of dictionaries.\
+"""
+# authors = [
+#     {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"},
+#     {name = "Luca Soldaini", email = "luca@soldaini.net"}
+# ]
 license = {text = "Apache-2.0"}
 readme = "README.md"
 requires-python = ">=3.9"
@@ -48,6 +53,21 @@ keywords = [
     "in context learning"
 ]
 
+[[project.authors]]
+name = "Allen Institute for Artificial Intelligence"
+email = "contact@allenai.org"
+
+[[project.authors]]
+name = "Luca Soldaini"
+email = "luca@soldaini.net"
+
+[[project.authors]]
+name = "Kyle Lo"
+email = "kylel@allenai.org"
+
+[[project.maintainers]]
+name = "Luca Soldaini"
+email = "luca@soldaini.net"
 
 [project.urls]
 "Homepage" = "https://github.com/allenai/smashed"
