--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,10 @@ keywords = [
     "mappers",
     "pytorch",
     "torch",
-    "huggingfae",
+    "huggingface",
     "transformers",
     "datasets",
     "dict",
-    "datset",
     "pipeline",
     "preprocessing",
     "nlp",
