--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smashed"
-version = "0.18.0"
+version = "0.18.1"
 description = """\
 SMASHED is a toolkit designed to apply transformations to samples in \
 datasets, such as fields extraction, tokenization, prompting, batching, \
@@ -18,6 +18,7 @@ dependencies = [
     "platformdirs>=2.5.0",
     "glom>=21.0.0",
     "Jinja2>=3.0.3",
+    "numpy>=1.19.5"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
